--- a/001 DOM and Element Search/02-task.html
+++ b/001 DOM and Element Search/02-task.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 2</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quam est debitis. Architecto quas asperiores
-        blanditiis a fugiat impedit eum dolorem cum rerum dolorum iste amet, ratione assumenda expedita maiores?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quam est
+      debitis. Architecto quas asperiores blanditiis a fugiat impedit eum
+      dolorem cum rerum dolorum iste amet, ratione assumenda expedita maiores?
     </p>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore eligendi nemo est? Unde, doloribus, magnam
-        necessitatibus eos quia aliquam eaque quis aspernatur placeat sequi autem officiis, modi a exercitationem totam.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore eligendi
+      nemo est? Unde, doloribus, magnam necessitatibus eos quia aliquam eaque
+      quis aspernatur placeat sequi autem officiis, modi a exercitationem totam.
     </p>
     <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi doloremque magni ut corporis, perspiciatis
-        tempore in, accusantium suscipit nemo quod saepe. Autem laudantium adipisci nemo magni repudiandae repellat
-        error. Dolore?
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi
+      doloremque magni ut corporis, perspiciatis tempore in, accusantium
+      suscipit nemo quod saepe. Autem laudantium adipisci nemo magni repudiandae
+      repellat error. Dolore?
     </p>
-</body>
+  </body>
 
-<script>
-    /* 
+  <script>
+    /*
     Задание:
     getRandomColor функция, которая возвращает случайно сгенерированный цвет в фомрмате #001122
     Используя функцию getRandomColor добавьте для каждого параграфа рамку случайного цвета
     */
     function getRandomColor() {
-        var letters = '0123456789ABCDEF';
-        var color = '#';
-        for (var i = 0; i < 6; i++) {
-            color += letters[Math.floor(Math.random() * 16)];
-        }
-        return color;
+      var letters = "0123456789ABCDEF";
+      var color = "#";
+      for (var i = 0; i < 6; i++) {
+        color += letters[Math.floor(Math.random() * 16)];
+      }
+      return color;
     }
-</script>
 
+    let paragraph = document.querySelectorAll("p");
+    for (const p of paragraph) {
+      p.style.border = "1px solid " + getRandomColor();
+    }
+  </script>
 </html>
