--- a/002 DOM Navigation/03-task.html
+++ b/002 DOM Navigation/03-task.html
@@ -1,80 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
 
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
 
-        table,
-        th,
-        td {
-            border: 1px solid black;
-        }
+      table,
+      th,
+      td {
+        border: 1px solid black;
+      }
 
-        td, th {
-            padding: 8px;
-        }
+      td,
+      th {
+        padding: 8px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <table id="statsTable">
-        <tr>
-            <th>Месяц</th>
-            <th>Отдел 1</th>
-            <th>Отдел 2</th>
-        </tr>
-        <tr>
-            <td>Январь</td>
-            <td>50</td>
-            <td>120</td>
-        </tr>
-        <tr>
-            <td>Февраль</td>
-            <td>60</td>
-            <td>140</td>
-        </tr>
-        <tr>
-            <td>Март</td>
-            <td>125</td>
-            <td>115</td>
-        </tr>
-        <tr>
-            <td>Апрель</td>
-            <td>87</td>
-            <td>100</td>
-        </tr>
-        <tr>
-            <td>Март</td>
-            <td>95</td>
-            <td>80</td>
-        </tr>
-        <tr>
-            <td>Июнь</td>
-            <td>115</td>
-            <td>90</td>
-        </tr>
-        <tr>
-            <td>Июль</td>
-            <td>125</td>
-            <td>100</td>
-        </tr>
+      <tr>
+        <th>Месяц</th>
+        <th>Отдел 1</th>
+        <th>Отдел 2</th>
+      </tr>
+      <tr>
+        <td>Январь</td>
+        <td>50</td>
+        <td>120</td>
+      </tr>
+      <tr>
+        <td>Февраль</td>
+        <td>60</td>
+        <td>140</td>
+      </tr>
+      <tr>
+        <td>Март</td>
+        <td>125</td>
+        <td>115</td>
+      </tr>
+      <tr>
+        <td>Апрель</td>
+        <td>87</td>
+        <td>100</td>
+      </tr>
+      <tr>
+        <td>Март</td>
+        <td>95</td>
+        <td>80</td>
+      </tr>
+      <tr>
+        <td>Июнь</td>
+        <td>115</td>
+        <td>90</td>
+      </tr>
+      <tr>
+        <td>Июль</td>
+        <td>125</td>
+        <td>100</td>
+      </tr>
+      <tr>
+        <td>ИТОГО</td>
+        <td id="dep1Output"></td>
+        <td id="dep2Output"></td>
+      </tr>
     </table>
 
     <div id="result"></div>
 
     <script>
-        /*
+      /*
         Задание:
         Добавьте строку "Итого" для таблицы statsTable. Напишите сценарий, которым выведите во вторую ячейку этой строки сумму всех числовых значений второй колонки.
         Выведите в третью ячейку этой строки сумму всех числовых значений из третьей колонки таблицы.
         В div с id result выведите сообщение "Отдел 1 сделал больше продаж" или "Отдел 2 сделал больше продаж" на основе раннее вычисленных значений в строке "Итого".
         Используйте любые методы, которые были рассмотрены на в прошлых уроках.
         */
+      let colum2Td = document.querySelectorAll("#statsTable td:nth-child(2)");
+      let colum3Td = document.querySelectorAll("#statsTable td:nth-child(3)");
+
+      let dep1Sum = 0;
+      let dep2Sum = 0;
+
+      for (const td of colum2Td) {
+        dep1Sum += Number(td.textContent);
+      }
+
+      for (const td of colum3Td) {
+        dep2Sum += Number(td.textContent);
+      }
+
+      document.querySelector("#dep1Output").textContent = dep1Sum;
+      document.querySelector("#dep2Output").textContent = dep2Sum;
+
+      let message =
+        dep1Sum > dep2Sum
+          ? "Отдел 1 сделал больше продаж"
+          : "Отдел 2 сделал больше продаж";
+      document.querySelector("#result").textContent = message;
     </script>
-</body>
+  </body>
 </html>
