lesson3_first_task_finished

--- a/003 DOM Tree Modification/Tasks/01-task.html
+++ b/003 DOM Tree Modification/Tasks/01-task.html
@@ -24,6 +24,10 @@
         "Friday",
         "Saturday",
       ];
+      let div = document.querySelector("#output");
+      days.forEach((element) => {
+        div.insertAdjacentHTML("beforeend", `<p>${element}`);
+      });
     </script>
   </body>
 </html>
