lesson3_second_task_finished

--- a/003 DOM Tree Modification/Tasks/02-task.html
+++ b/003 DOM Tree Modification/Tasks/02-task.html
@@ -1,42 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 2</title>
 
     <style>
-        div {
-            font-weight: bold;
-        }
+      div {
+        font-weight: bold;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     Рабочие дни
-    <div></div>
+    <div id="workingDays"></div>
 
     Выходные дни
-    <div></div>
+    <div id="weekend"></div>
 
     <script>
-       /*
-        Задание:
-        Используя параграфы, выведите все рабочие дни недели в div, который находится после фразы "Рабочие дни", 
-		выведите все выходные дни недели после фразы "Выходные дни".
-        Можно внести в разметку соответствующие изменения, чтобы упростить задачу поиска необходимых div. 
-        Параграфы создавайте с помощью перебора массива days. В параграф помещайте значение свойства name.
-        */
+      /*
+            Задание:
+            Используя параграфы, выведите все рабочие дни недели в div, который находится после фразы "Рабочие дни",
+      выведите все выходные дни недели после фразы "Выходные дни".
+            Можно внести в разметку соответствующие изменения, чтобы упростить задачу поиска необходимых div.
+            Параграфы создавайте с помощью перебора массива days. В параграф помещайте значение свойства name.
+            */
 
-        let days = [{ name: "Sunday", isWorkDay: false },
+      let days = [
+        { name: "Sunday", isWorkDay: false },
         { name: "Monday", isWorkDay: true },
         { name: "Tuesday", isWorkDay: true },
         { name: "Wednesday", isWorkDay: true },
         { name: "Thursday", isWorkDay: true },
         { name: "Friday", isWorkDay: true },
-        { name: "Saturday", isWorkDay: false }];
-    </script>
-</body>
+        { name: "Saturday", isWorkDay: false },
+      ];
 
+      let workingDaysDiv = document.querySelector("#workingDays");
+      let weekendDiv = document.querySelector("#weekend");
+
+      // variant 1
+      /*function createParagraph(text) {
+        let element = document.createElement("p");
+        element.innerText = text;
+        return element;
+      }
+      for (const day of days) {
+        if (day.isWorkDay) {
+          workingDaysDiv.append(createParagraph(day.name));
+        } else {
+          weekendDiv.append(createParagraph(day.name));
+        }
+      }*/
+
+      // variant 2
+      for (const day of days) {
+        if (day.isWorkDay) {
+          workingDaysDiv.insertAdjacentHTML("beforeend", `<p>${day.name}</p>`);
+        } else {
+          weekendDiv.insertAdjacentHTML("beforeend", `<p>${day.name}</p>`);
+        }
+      }
+    </script>
+  </body>
 </html>
