--- a/003 DOM Tree Modification/Tasks/04-task.html
+++ b/003 DOM Tree Modification/Tasks/04-task.html
@@ -1,67 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
 
-        table,
-        th,
-        td {
-            border: 1px solid black;
-        }
+      table,
+      th,
+      td {
+        border: 1px solid black;
+      }
 
-        td, th {
-            padding: 8px;
-        }
+      td,
+      th {
+        padding: 8px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
+      /*
         Задание:
         Создайте таблицу (table, tr, td) на основе массива объектов с именем source. Каждый объект - отдельная строка таблицы. Свойство month - значение для первой колонок.
         Свойство amont - значение для второй колонки.
         */
 
-        let source = [
-            {
-                month: "Январь",
-                amount: 20
-            },
-            {
-                month: "Февраль",
-                amount: 140
-            },
-            {
-                month: "Март",
-                amount: 115
-            },
-            {
-                month: "Апрель",
-                amount: 100
-            },
-            {
-                month: "Март",
-                amount: 80
-            },
-            {
-                month: "Июнь",
-                amount: 90
-            },
-            {
-                month: "Июль",
-                amount: 100
-            }
-        ];
+      let source = [
+        {
+          month: "Январь",
+          amount: 20,
+        },
+        {
+          month: "Февраль",
+          amount: 140,
+        },
+        {
+          month: "Март",
+          amount: 115,
+        },
+        {
+          month: "Апрель",
+          amount: 100,
+        },
+        {
+          month: "Март",
+          amount: 80,
+        },
+        {
+          month: "Июнь",
+          amount: 90,
+        },
+        {
+          month: "Июль",
+          amount: 100,
+        },
+      ];
 
+      function createRow(colum1Text, colum2Text) {
+        let tr = document.createElement("tr");
+        tr.append(createCell(colum1Text));
+        tr.append(createCell(colum2Text));
+        return tr;
+      }
+
+      function createCell(text) {
+        let td = document.createElement("td");
+        td.textContent = text;
+        return td;
+      }
+
+      let table = document.createElement("table");
+
+      for (const item of source) {
+        table.append(createRow(item.amount, item.month));
+      }
+
+      document.body.append(table);
     </script>
-</body>
-
+  </body>
 </html>
