--- a/004 Props and Attributes/Tasks/03-task.html
+++ b/004 Props and Attributes/Tasks/03-task.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 03</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div>Div 1</div>
     <div data-remove>Div 2</div>
     <div>Div 3</div>
     <div data-remove>Div 4</div>
 
     <script>
-        /*
-        Задание:
-        Напишите сценарий, который удалит на странице элементы с атрибутом data-remove
-        */
+      /*
+          Задание:
+          Напишите сценарий, который удалит на странице элементы с атрибутом data-remove
+          */
+      let elements = document.querySelectorAll("[data-remove]");
+      for (const e of elements) {
+        e.remove();
+      }
     </script>
-</body>
-
+  </body>
 </html>
