--- a/005 Styles/02-task.html
+++ b/005 Styles/02-task.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02</title>
-</head>
+  </head>
 
-<body>
-    <div>
-        Логин или пароль введен неправильно
-    </div>
+  <body>
+    <div>Логин или пароль введен неправильно</div>
     <script>
-        /*
+      /*
         Задание:
         Не используя CSS классы, поменяйте с помощью JavaScript кода оформление элемента DIV, расположенного на текущей странице.
         
@@ -23,7 +20,11 @@
         >> внутренний отступ в 16px
         >> скругление рамки в 8 px
         */
+      let div = document.querySelector("div");
+      div.style.fontFamily = "'Segoe UI', Tahoma, Geneva, Verdana, sans-serif";
+      div.style.border = "1px solid red";
+      div.style.padding = "16px";
+      div.style.borderRadius = "8px";
     </script>
-</body>
-
+  </body>
 </html>
