--- a/005 Styles/03-task.html
+++ b/005 Styles/03-task.html
@@ -1,42 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 03</title>
 
     <style>
-        div {
-            background-color: lightblue;
-            padding: 8px;
-            margin: 4px;
-            display: inline-block;
-        }
+      div {
+        background-color: lightblue;
+        padding: 8px;
+        margin: 4px;
+        display: inline-block;
+      }
 
-        .busy-day {
-            color: darkred;
-            background-color: coral;
-        }
+      .busy-day {
+        color: darkred;
+        background-color: coral;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
-        Задание:
-        Приложение создает для каждого дня недели div и поменяет какие дни недели являются занятыми.
+      /*
+              Задание:
+              Приложение создает для каждого дня недели div и поменяет какие дни недели являются занятыми.
 
-        Создайте div под каждый элемент массива days, значения элементов массива должны быть добавлены как текст в div. Если текст созданного div находится в массиве
-        busyDays добавьте для такого div дополнительно класс .busy-day
-        Разместите все созданные в конец тела документа.
-        */
+              Создайте div под каждый элемент массива days, значения элементов массива должны быть добавлены как текст в div. Если текст созданного div находится в массиве
+              busyDays добавьте для такого div дополнительно класс .busy-day
+              Разместите все созданные в конец тела документа.
+              */
 
-        let days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
-        let busyDays = ["Monday", "Thursday", "Friday"];
+      let days = [
+        "Sunday",
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday",
+        "Saturday",
+      ];
+      let busyDays = ["Monday", "Thursday", "Friday"];
 
+      days.forEach((day) => {
+        let dayElement = document.createElement("div");
+        dayElement.textContent = day;
+        if (busyDays.indexOf(day) != -1) {
+          dayElement.classList.add("busy-day");
+        }
+        document.body.append(dayElement);
+      });
     </script>
-</body>
-
+  </body>
 </html>
