--- a/006 Events. Part 1/01-task.html
+++ b/006 Events. Part 1/01-task.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 01</title>
-</head>
+  </head>
 
-<body>
-    <button id="testBtn">Test Button</button>
+  <body>
+    <button id="testBtn" onclick="greeting2()">Test Button</button>
     <script>
-        /*
-        Задание:
-        Добавьте для кнопки testBtn обработчик на событие click.
-        Обработчик должен выводить на экран сообщение Hello world.
-        Добавьте обработчик тремя разными способами.
-        */
-    </script>
-</body>
+      /*
+             Задание:
+             Добавьте для кнопки testBtn обработчик на событие click.
+             Обработчик должен выводить на экран сообщение Hello world.
+             Добавьте обработчик тремя разными способами.
+             */
 
+      let way1 = document.querySelector("#testBtn");
+      way1.onclick = function () {
+        alert(`hello`);
+      };
+
+      //
+      let way2 = document.querySelector("#testBtn");
+      way2.addEventListener("click", greeting);
+      function greeting() {
+        alert(`Hello2`);
+      }
+
+      //
+      function greeting2() {
+        alert(`Hello3`);
+      }
+    </script>
+  </body>
 </html>
