--- a/006 Events. Part 1/02-task.html
+++ b/006 Events. Part 1/02-task.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <div>Радиус</div>
+    <input type="text" id="radius" />
+    <div>Высота</div>
+    <input type="text" id="height" />
+    <br />
+    <button id="btnResult">Расчет объема</button>
     <script>
-        /*
+      /*
         Задание:
         Напишите сценарий, который вычисляет объем цилиндра по параметрам, которые вводит пользователь.
         Для расчета используйте формулу - V=π * r в квадрате * h
         Разместите на странице два поля ввода - первое для радиуса цилиндра, второе для высоты цилиндра.
         Объем цилиндра выведите в тело страницы.
         */
-    </script>
-</body>
+      let btnResult = document.querySelector("#btnResult");
+      let radiusInput = document.querySelector("#radius");
+      let heightInput = document.querySelector("#height");
 
+      btnResult.addEventListener("click", calc);
+
+      function calc() {
+        let radius = radiusInput.value;
+        let height = heightInput.value;
+        let result = Number(Math.PI * radius * radius * height);
+        alert(`Объем равен ${result}`);
+      }
+    </script>
+  </body>
 </html>
