--- a/006 Events. Part 1/04-task.html
+++ b/006 Events. Part 1/04-task.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 04</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <ul id="list">
-        <li>Яблого</li>
-        <li>Груша</li>
-        <li>Апельсин</li>
-        <li>Мандарин</li>
-        <li>Ананас</li>
-        <li>Слива</li>
+      <li>Яблого</li>
+      <li>Груша</li>
+      <li>Апельсин</li>
+      <li>Мандарин</li>
+      <li>Ананас</li>
+      <li>Слива</li>
     </ul>
 
+    <button id="sort">Sort</button>
+
     <script>
-        /*
+      /*
         Задание:
         Перепишите сценарий. Сделайте так, чтобы сортировка элементов в #list происходила при нажатии
         на кнопку (кнопку нужно добавить), а не при загрузке страницы
         */
-        let list = document.querySelector("#list");
+      let list = document.querySelector("#list");
+      let items = document.querySelectorAll("li"); // получаем объект NodeList (это не массив)
 
-        let items = document.querySelectorAll("li"); // получаем объект NodeList (это не массив)
-        let itemsArray = Array.from(items); // на основе NodeList создаем массив
-        
-        // выполняем сортировку с помощью стандартного метода массива
-        // так как сортируются узлы DOM нужно определить критерии, по которым узлы будут сравниваться
-        // функция, указанная в параметре метода sort определяет логику сравнения двух элементов в массиве. Она должна возвращать значение:
-        // если a < b возвращать значение меньше 0
-        // если a > b возвращать значение больше 0
-        // если a == b возвращать 0
+      let sortBtn = document.querySelector("#sort");
+      sortBtn.addEventListener("click", sortFunction);
 
-        itemsArray.sort(function (a, b) {
-            if (a.textContent < b.textContent)
-                return -1;
-            if (a.textContent > b.textContent)
-                return 1;
-            return 0;
+      let itemsArray = Array.from(items); // на основе NodeList создаем массив
+
+      // выполняем сортировку с помощью стандартного метода массива
+      // так как сортируются узлы DOM нужно определить критерии, по которым узлы будут сравниваться
+      // функция, указанная в параметре метода sort определяет логику сравнения двух элементов в массиве. Она должна возвращать значение:
+      // если a < b возвращать значение меньше 0
+      // если a > b возвращать значение больше 0
+      // если a == b возвращать 0
+
+      itemsArray.sort(function (a, b) {
+        if (a.textContent < b.textContent) return -1;
+        if (a.textContent > b.textContent) return 1;
+        return 0;
+      });
+
+      // добавление элементов в алфавитном порядке
+      // так как элементы уже есть в DOM дереве, то при добавлении элемент удаляется со своей предыдущей позиции
+      function sortFunction() {
+        itemsArray.forEach((item) => {
+          list.append(item);
         });
-
-        // добавление элементов в алфавитном порядке
-        // так как элементы уже есть в DOM дереве, то при добавлении элемент удаляется со своей предыдущей позиции
-        itemsArray.forEach(item => {
-            list.append(item);
-        });
-
-
+      }
     </script>
-</body>
-
+  </body>
 </html>
