--- a/008 Events. Part 3/01-task.html
+++ b/008 Events. Part 3/01-task.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 01</title>
-</head>
+  </head>
 
-<body>
-    <button>Click me!</button>
+  <body>
+    <button id="btn">Click me!</button>
     <script>
-        /*
+      /*
         Задание:
         Добавьте для кнопки два обработчика, один должен сработать в фазе capturing, второй - в фазе bubbling
         */
+      let btn = document.querySelector("#btn");
+      btn.addEventListener(
+        "click",
+        function () {
+          alert("CAPTURING");
+        },
+        true
+      );
+      btn.addEventListener("click", function () {
+        alert("BUBLING");
+      });
     </script>
-</body>
-
+  </body>
 </html>
