--- a/010 Constructor Functions/01-task.html
+++ b/010 Constructor Functions/01-task.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 01</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
+      /*
         Задание:
         Выполните рефакторинг кода. Сделайте так, чтобы объекты создавались не через литералы, а через функцию конструктор.
         */
 
-        let user1 = {
-            firstName: "Ivan",
-            lastName: "Ivanov",
-            
-            show: function () {
-                console.log(this.firstName + " " + this.lastName);
-            }
-        }
+      function User(firstName, lastName) {
+        this.firstName = firstName;
+        this.lastName = lastName;
 
-        let user2 = {
-            firstName: "Olga",
-            lastName: "Petrova",
-            
-            show: function () {
-                console.log(this.firstName + " " + this.lastName);
-            }
-        }
+        this.show = function () {
+          // желательно вынести в прототип
+          console.log(this.firstName + " " + this.lastName);
+        };
+      }
 
-        user1.show();
-        user2.show();
+      let user1 = new User("Ivan", "Ivanov");
+      let user2 = new User("Olga", "Petrova");
+
+      user1.show();
+      user2.show();
     </script>
-</body>
-
+  </body>
 </html>
