--- a/011 Classes/02-task.html
+++ b/011 Classes/02-task.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
+      /*
         Задание:
         Определите класс цилиндр, который будет объектным представлением геометрического тела.
         Класс должен содержать конструктор.
@@ -19,7 +18,23 @@
         Создайте два экземпляра данного класса, передав произвольные значения в качестве параметров конструктора и выведите
         на консоль значения объема двух экземпляров.
         */
-    </script>
-</body>
 
+      class Cylinder {
+        constructor(height, radius) {
+          this.height = height;
+          this.radius = radius;
+        }
+
+        getVolume() {
+          return Math.PI * Math.pow(this.radius, 2) * this.height;
+        }
+      }
+
+      let c1 = new Cylinder(100, 20);
+      let c2 = new Cylinder(50, 25);
+
+      console.log(c1.getVolume());
+      console.log(c2.getVolume());
+    </script>
+  </body>
 </html>
