lesson12_third_task_finished

--- a/012 Classes. Inheritance/03-task.html
+++ b/012 Classes. Inheritance/03-task.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 03</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
-        Задание:
-        Найдите и исправьте ошибку
-        */
+      /*
+      Задание:
+      Найдите и исправьте ошибку
+      */
 
-        class Car {
-            model;
+      class Car {
+        model;
 
-            constructor(model) {
-                this.model = model;
-            }
-
-            move() {
-                console.log(`Машина ${this.model} двигается со скоростью 80 км/час`);
-            }
+        constructor(model) {
+          this.model = model;
         }
 
-        class Truck extends Car {
-            weight;
-            maxCargo;
-            model;
+        move() {
+          console.log(`Машина ${this.model} двигается со скоростью 80 км/час`);
+        }
+      }
 
-            constructor(model, maxCargo) {
-                this.model = model;
-                this.maxCargo = maxCargo;
-            }
+      class Truck extends Car {
+        weight;
+        maxCargo;
+        model;
 
-            loadCargo(weight) {
-                if (weight > this.maxCargo) {
-                    console.log("Этот грузовик не может перевозить более 1000кг груза");
-                }
-                else {
-                    this.weight = weight;
-                    console.log(`В грузовик загружено ${this.weight}кг.`);
-                }
-            }
+        constructor(model, maxCargo) {
+          super(model);
+          this.model = model;
+          this.maxCargo = maxCargo;
         }
 
-        let v1 = new Car("Mazda");
-        v1.move();
+        loadCargo(weight) {
+          if (weight > this.maxCargo) {
+            console.log(
+              `Этот грузовик не может перевозить более ${this.maxCargo} кг груза`
+            );
+          } else {
+            this.weight = weight;
+            console.log(`В грузовик загружено ${this.weight}кг.`);
+          }
+        }
+      }
 
-        let v2 = new Truck();
-        v2.loadCargo(1500);
-        v2.move();
+      let v1 = new Car("Mazda");
+      v1.move();
+
+      let v2 = new Truck("КАМАЗ", 2000);
+      v2.loadCargo(1900);
+      v2.move();
     </script>
-</body>
-
+  </body>
 </html>
