--- a/012 Classes. Inheritance/02-task.html
+++ b/012 Classes. Inheritance/02-task.html
@@ -18,6 +18,10 @@
         */
 
       class Car {
+        model;
+        cosntructor(model) {
+          this.model = model;
+        }
         move() {
           console.log("Машина двигается со скоростью 80 км/час");
         }
@@ -25,8 +29,14 @@
 
       class Truck extends Car {
         weight;
+        maxCargo;
+        cosntructor(model, maxCargo) {
+          super(model);
+          this.maxCargo = maxCargo;
+        }
+
         loadCargo(weight) {
-          if (weight > 1000) {
+          if (weight > this.maxCargo) {
             console.log("Этот грузовик не может перевозить более 1000кг груза");
           } else {
             this.weight = weight;
@@ -42,7 +52,7 @@
         }
       }
 
-      let v1 = new Car();
+      let v1 = new Car(Mazda);
       v1.move();
 
       let v2 = new Truck();
