lesson18_fourth_task_finished

--- a/018 Exception Handling/04-task.html
+++ b/018 Exception Handling/04-task.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 04</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
+      /*
         Задание:
         Создайте пользовательский класс исключения DivideByZeroError
         Сделайте так, чтобы функция divide при попытке деления на 0 выбрасывала эту ошибку.
         Добавьте код, обрабатывающий исключение.
         */
 
-        function divide(operand1, operand2) {
-            return operand1 / operand2;
+      function divide(operand1, operand2) {
+        if (operand2 == 0) {
+          let DivideByZeroError = new Error("Деление на 0 недопустимо");
+          throw DivideByZeroError;
+        } else {
+          return operand1 / operand2;
         }
+      }
 
-        console.log(divide(10, 5));
-        console.log(divide(100, 0));
-        console.log(divide(1000, 50));
+      console.log(divide(10, 5));
+      console.log(divide(100, 1));
+      console.log(divide(1000, 0));
     </script>
-</body>
-
+  </body>
 </html>
